--- a/views/iniciopartida.erb
+++ b/views/iniciopartida.erb
@@ -1,16 +1,12 @@
-<h1>Bienvenidos al Dados 1.0</h1>
+<h1>Bienvenidos al Juego UNO</h1>
+<p></p>
+<p> (c)2017, by Equipo Oca02 </p>
+<p></p>
+<p></p>
+<p> <a href="/jugar"/a></p>
+<p>Comenzar Partida</p>
+<p></p>
 
-<form method="post" action="/jugar">
 
-  <p> Jugador 1: <%= @sumajugador1 %> </p>
-  <p> Jugador 2: <%= @sumajugador2 %> </p>
-  </br>
-  </br>
-  <img scr="" />
-  <p> Resultado: <%= @resultado %> </p>
-  </br>
-  </br>
-  <input type= "submit" value= "TirarDados" />
-  <input type= "submit" value= "Plantarse" />
-</form>
+
 
