--- a/views/pantallajuego.erb
+++ b/views/pantallajuego.erb
@@ -4,7 +4,7 @@
 <p> Jugador B: <%= @@puntajeB %> </p>
 </br>
 </br>
-<img scr="" />
+<img src="http://1.bp.blogspot.com/-2xhyByluOxA/TqTnvAEpgpI/AAAAAAAAAZE/8qm_oVvkj_Q/s1600/dado.png" />
 </br>
 <p> Resultado Jugador <%= @@turno %> : <%= @@valordado %> </p>
 </br>
